--- a/Project.toml
+++ b/Project.toml
@@ -1,9 +1,11 @@
 name = "PlutoCanvasPlot"
 uuid = "57876ffe-7b7d-4c51-befe-9eb7dc4baaca"
 authors = ["Juergen Fuhrmann <juergen.fuhrmann@wias-berlin.de>"]
-version = "0.0.2"
+version = "0.0.3"
 
 [deps]
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
+PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
+Triangulate = "f7e6ffb2-c36d-4f8f-a77e-16e897189344"
 UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
